[fix #367] export align in list-menu

--- a/src/renderer/assets/styles/myBooks.css
+++ b/src/renderer/assets/styles/myBooks.css
@@ -214,8 +214,6 @@ main {
     }
 
 	& span {
-		display: flex;
-		align-items: center;
 		& label {
 			cursor: pointer;
 
